# ChangeLog for x11-misc/xdg-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xdg-utils/ChangeLog,v 1.47 2009/02/02 18:49:12 scarabeus Exp $

  02 Feb 2009; Tomas Chvatal <scarabeus@gentoo.org>
  +files/xdg-utils-1.0.2-xdgopen-kde.patch, xdg-utils-1.0.2-r2.ebuild:
  Patch up xdg-open for kde.

*xdg-utils-1.0.2-r2 (12 May 2008)

  12 May 2008; Samuli Suominen <drac@gentoo.org>
  +files/xdg-utils-1.0.2-kdedirs.patch, +xdg-utils-1.0.2-r2.ebuild:
  Handle kdedirs gracefully, patch from flameeyes's git.

  22 Feb 2008; Ulrich Mueller <ulm@gentoo.org> xdg-utils-1.0.2-r1.ebuild:
  Move desktop-file-utils to PDEPEND because of dependency cycle, bug 208043.

  03 Feb 2008; Samuli Suominen <drac@gentoo.org> xdg-utils-1.0.2-r1.ebuild:
  Update HOMEPAGE.

  29 Jan 2008; Samuli Suominen <drac@gentoo.org> xdg-utils-1.0.2-r1.ebuild:
  Pull in desktop-file-utils and shared-mime-info, leave a postinst message
  about gtk-update-icon-cache wrt #208043.

*xdg-utils-1.0.2-r1 (26 Jan 2008)

  26 Jan 2008; <pva@gentoo.org> +files/xdg-utils-1.0.2-arb-comm-exec.patch,
  +xdg-utils-1.0.2-r1.ebuild:
  Security commit straight to stable, fixed xdg-open/email URL arbitrary
  command execution (CVE-2008-0386), bug #207331.

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org> xdg-utils-1.0.2.ebuild:
  sparc stable wrt #193339

  15 Oct 2007; Markus Rothe <corsair@gentoo.org> xdg-utils-1.0.2.ebuild:
  Stable on ppc64

  27 Sep 2007; Raúl Porcel <armin76@gentoo.org> xdg-utils-1.0.2.ebuild:
  alpha/ia64 stable wrt #193339

  26 Sep 2007; Joshua Kinard <kumba@gentoo.org> xdg-utils-1.0.2.ebuild:
  Stable on mips, per #193339.

  25 Sep 2007; Jeroen Roovers <jer@gentoo.org> xdg-utils-1.0.2.ebuild:
  Stable for HPPA (bug #193339).

  22 Sep 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xdg-utils-1.0.2.ebuild:
  ppc stable, bug #193339

  21 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  xdg-utils-1.0.2.ebuild: