@@ -4,6 +4,7 @@ AUX xdg-utils-1.0.2-xdgopen-kde.patch 326 RMD160 a37c4c3b536d8ef242b6271e79a849b
 DIST xdg-utils-1.0.2.tgz 282262 RMD160 344482917e8c780613ec20b103f8e51322540c04 SHA1 e41a04cbf9ff8d743397a2bc23c6ca82e8b59d2c SHA256 21aeb7d16b2529b8d3975118f59eec09953e09f9a68d718159e98c90474b01ac
 EBUILD xdg-utils-1.0.2-r1.ebuild 1056 RMD160 10b870243b5e56a7b423d2fdfb36684ad6b04edb SHA1 458bd95f4185b695edcb94448bc95d19ccbf3ef9 SHA256 e4f0811f46cb1baa2996e8a2ecd988ed9ec7296df4eab1d1db205afb95dbf247
 EBUILD xdg-utils-1.0.2-r2.ebuild 1153 RMD160 4e6ffbb15642138df83f7124e5337b2bdd065b7a SHA1 f2ecf1103875c3f94079cea7060460b6f7629b7b SHA256 6f478f19edf5947343542efa6e114ac4a278b9dc7767296b0673c983a1714645
+EBUILD xdg-utils-1.0.2-r3.ebuild 1678 RMD160 4d2eb8f598cd8b8f586922eb1fa0bc2f13b8ab85 SHA1 5f1e6e13eccf16e389a0cf7fcc80362fac946c33 SHA256 b33895b8f889a7c4c0c538f6bdbeaefaf451543b60b706eda019a3eb84471f61
 EBUILD xdg-utils-1.0.2.ebuild 778 RMD160 441cd473569b7cb1d7f3f79b2a3cdebefb30dd4d SHA1 8ad2005b19974cd46c7b8525df356f9507040e4a SHA256 187e5fef30501b478c4f4c4c5a41726e9b09eb080d86515efbcf577f570a6c44
-MISC ChangeLog 6078 RMD160 320cd133fda1f38b6a5b4568527ec4d1bdaff752 SHA1 f97f482f1b17ea73cafc310c716daf80038cd348 SHA256 f9ddb35c09d6a4fe588ae789b5188b3485c47483e106b189a2409c36adac2d9a
+MISC ChangeLog 6432 RMD160 784b1d3fa89f00e672604c3912bf6411bea51f81 SHA1 84f29fb0b6e321e5d4a209571c893996a5970291 SHA256 a709c8ef21c9fea06407d32450210ed04ba7c4f7ed16e33f8d83dbf913a752a5
 MISC metadata.xml 234 RMD160 bd496dac30573bf707591b2b2ad497860e5aa029 SHA1 4641c1e70e35e944e7019aeae967deb1d2c28186 SHA256 3018e3b31ed690a57bfc14e35699dd20ea3b352fc28b918f699e6955b57a2d97
